text area overflow fixed, header logo styles modified

--- a/toDoList/src/components/Header/styles/style.module.scss
+++ b/toDoList/src/components/Header/styles/style.module.scss
@@ -19,6 +19,10 @@
 
         .toDo__logo__span {
             color: $primary-color;
+
+            .last__child {
+                color: $primary-active-color;
+            }
         }
     }
 }
